// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedProducts component renders correctly with no related products 1`] = `<div />`;

exports[`RelatedProducts component renders correctly with related products 1`] = `
<div>
  <div
    class="Section-root-1 Section-alabaster-3"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-8 Typography-root-11 Typography-underline-13 MuiTypography-h2"
          data-testid="typography"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div
          class="RelatedProducts"
        >
          <div
            class="Tabs-root-19 Tabs-secondary-26"
          >
            <div
              class="Tabs-TabsBar-25"
            >
              <div
                class="Container-root-9"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-20 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-21"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-group"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-22 Mui-selected"
                          data-gtm="{\\"id\\":\\"related-products-filter1\\",\\"label\\":\\"group\\",\\"action\\":\\"Filter – Related Products\\"}"
                          data-testid="tab-group"
                          id="tab-group"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            group
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-29 PrivateTabIndicator-colorPrimary-30 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-group"
              class="MuiGrid-root Tabs-TabPanel-23 MuiGrid-item"
              data-testid="tabpanel-group"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-35 Tabs-TabPanelBox-24"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root Grid-item-33 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard-root-36 OverviewCard-clickable-39"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="OverviewCard-headerPicture-42 Media-root-51 Media-contain-52"
                        src="http://localhost:8000"
                      />
                      <div
                        class="OverviewCard-body-43"
                      >
                        <h5
                          class="MuiTypography-root OverviewCard-title-44 OverviewCard-noBrandLogo-45 Typography-root-11 MuiTypography-h5"
                          data-testid="typography"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root OverviewCard-text-46 Typography-root-11 MuiTypography-h6"
                          data-testid="typography"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="OverviewCard-children-47 OverviewCard-text-46"
                        >
                          MC: pdp.nobb.label
                          :
                           
                          <b>
                            external-product-code
                          </b>
                        </div>
                        <div
                          class="OverviewCard-footer-49"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-53 Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="AnchorLink-icon-57"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedProducts component renders correctly with related products without groups 1`] = `<div />`;

exports[`RelatedProducts component renders correctly without Brand and External Product code on related products 1`] = `
<div>
  <div
    class="Section-root-59 Section-alabaster-61"
  >
    <div
      class="Container-root-67"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-66 Typography-root-69 Typography-underline-71 MuiTypography-h2"
          data-testid="typography"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div
          class="RelatedProducts"
        >
          <div
            class="Tabs-root-77 Tabs-secondary-84"
          >
            <div
              class="Tabs-TabsBar-83"
            >
              <div
                class="Container-root-67"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-78 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-79"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-group"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-80 Mui-selected"
                          data-gtm="{\\"id\\":\\"related-products-filter1\\",\\"label\\":\\"group\\",\\"action\\":\\"Filter – Related Products\\"}"
                          data-testid="tab-group"
                          id="tab-group"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            group
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-87 PrivateTabIndicator-colorPrimary-88 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-group"
              class="MuiGrid-root Tabs-TabPanel-81 MuiGrid-item"
              data-testid="tabpanel-group"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-93 Tabs-TabPanelBox-82"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root Grid-item-91 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard-root-94 OverviewCard-clickable-97"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="OverviewCard-headerPicture-100 Media-root-109 Media-contain-110"
                        src="http://localhost:8000"
                      />
                      <div
                        class="OverviewCard-body-101"
                      >
                        <h5
                          class="MuiTypography-root OverviewCard-title-102 OverviewCard-noBrandLogo-103 Typography-root-69 MuiTypography-h5"
                          data-testid="typography"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root OverviewCard-text-104 Typography-root-69 MuiTypography-h6"
                          data-testid="typography"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="OverviewCard-children-105 OverviewCard-text-104"
                        >
                          MC: pdp.nobb.label
                          :
                           
                          <b>
                            external-product-code
                          </b>
                        </div>
                        <div
                          class="OverviewCard-footer-107"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="AnchorLink-icon-115"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root Grid-item-91 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard-root-94 OverviewCard-clickable-97"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="OverviewCard-headerPicture-100 Media-root-109 Media-contain-110"
                        src="http://localhost:8000"
                      />
                      <div
                        class="OverviewCard-body-101"
                      >
                        <h5
                          class="MuiTypography-root OverviewCard-title-102 OverviewCard-noBrandLogo-103 Typography-root-69 MuiTypography-h5"
                          data-testid="typography"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root OverviewCard-text-104 Typography-root-69 MuiTypography-h6"
                          data-testid="typography"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="OverviewCard-children-105 OverviewCard-text-104"
                        />
                        <div
                          class="OverviewCard-footer-107"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="AnchorLink-icon-115"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root Grid-item-91 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard-root-94 OverviewCard-clickable-97"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="OverviewCard-headerPicture-100 Media-root-109 Media-contain-110"
                        src="http://localhost:8000"
                      />
                      <div
                        class="OverviewCard-body-101"
                      >
                        <h5
                          class="MuiTypography-root OverviewCard-title-102 OverviewCard-noBrandLogo-103 Typography-root-69 MuiTypography-h5"
                          data-testid="typography"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root OverviewCard-text-104 Typography-root-69 MuiTypography-h6"
                          data-testid="typography"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="OverviewCard-children-105 OverviewCard-text-104"
                        />
                        <div
                          class="OverviewCard-footer-107"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="AnchorLink-icon-115"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
